--- a/SSISApplication.Generator.csproj
+++ b/SSISApplication.Generator.csproj
@@ -149,6 +149,7 @@
     <Content Include="App_Data\SSIS_IPM2.sql" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="db.sql" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
